--- a/jira-todo/pom.xml
+++ b/jira-todo/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>kafkaApp</artifactId>
+	<artifactId>jira-todo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>kafkaApp</name>
 	<description>Demo project for Spring Boot</description>
