--- a/notificationApp/src/main/resources/application.properties
+++ b/notificationApp/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-server.port=0
+spring.application.name=notificationApp
+server.port=8081
 spring.kafka.consumer.bootstrap-servers=localhost:9092,localhost:9094,localhost:9096
 spring.kafka.consumer.group-id=notify-service-group
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-
-
-
